# nodejs_2_rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USER_GUIDE.md  build.ps1  build.sh  package.json  recipe.json
config/: contracts.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  utils.rs
crates/cli/src/commands/: build.rs  config.rs  contract.rs  deploy.rs  dev.rs  frontend.rs  init.rs  mod.rs  network.rs  server.rs  test.rs  wallet.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/frontend/src/components/: balances.rs  contracts.rs  layout.rs  mod.rs  transactions.rs  wallet.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_initial.sql
crates/server/src/: blockchain.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs
crates/server/src/api/: balances.rs  mod.rs  transactions.rs  transfers.rs
crates/shared/: Cargo.toml
crates/shared/src/: common_types.rs  constants.rs  enums.rs  lib.rs  types.rs  utils.rs
crates/smart-contracts/: Cargo.toml
crates/smart-contracts/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: async_utils.rs  config.rs  crypto.rs  error.rs  error_handling.rs  formatting.rs  lib.rs  logging.rs  network.rs  validation.rs
examples/demo/: Cargo.toml  index.html
examples/demo/src/: main.rs
hakari/: Cargo.toml
scripts/: deploy-all.sh  run_demo.ps1  run_demo.sh  setup.sh
tests/: Cargo.toml  basic_test.rs
tests/src/integration/: api_tests.rs  contract_tests.rs  full_workflow.rs  mod.rs
tests/src/unit/: backend.rs  frontend.rs  mod.rs  smart_contracts.rs
