[package]
name = "ethereum-boilerplate-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen-test = "0.3"
leptos = { workspace = true }
leptos_macro = { workspace = true }
axum = "0.8.8"
http = "0.2.12"
http-body-util = "0.1.3"
tower = "0.5.3"
config = "0.15.19"
reqwest = "0.11.27"
ethereum-boilerplate-server = { path = "../crates/server" }
ethereum-boilerplate-smart-contracts = { path = "../crates/smart-contracts" }
futures = "0.3.31"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
alloy = { workspace = true }
serial_test = "3.0"
