[package]
name = "ethereum-boilerplate-smart-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts component of Ethereum Boilerplate Rust Edition"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Ethereum integration
alloy = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-contract = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-transport-ws = { workspace = true }
alloy-network = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
ethereum-boilerplate-utils = { path = "../utils" }
ethereum-boilerplate-shared = { path = "../shared" }

# Async
tokio = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
eyre = { workspace = true }

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "interact"
path = "src/bin/interact.rs"
