[package]
name = "ethereum-boilerplate-utils"
version = "0.1.0"
edition = "2021"
description = "Common utilities for Ethereum Boilerplate Rust Edition"

[dependencies]
# Shared types and constants
ethereum-boilerplate-shared = { path = "../shared" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# CLI utilities
colored = "2.1"
indicatif = "0.17"

# Ethereum
alloy = { workspace = true }
alloy-primitives = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }
rand = { workspace = true }
futures = "0.3.31"

[dev-dependencies]
tokio-test = "0.4"
